/*
Copyright SecureKey Technologies Inc. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/securekey/fabric-snaps/membershipsnap/api/membership";

package api;

// PeerEndpoint contains the preferred endpoint of a peer
message PeerEndpoint {
	string Endpoint = 1;
    bytes MSPid = 2;
    uint64 ledger_height = 3;
    bool left_channel = 4;
}

// PeerEndpoints contains a list of peer endpoints
message PeerEndpoints {
	repeated PeerEndpoint Endpoints = 1;
}
